--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,20 @@ body {
    font-family: 'Oswald', 'Futura', sans-serif;
 }
 
-header>h1{
-    color: #ab7a30;
+section>h1{
+    color: #dbac66;
     text-align: center;
     font-family: 'Oswald', 'Futura', sans-serif;
-    box-shadow: 3px 3px rgba(0,0,0,0.2) inset;   
+}
+
+.slogan{
+    min-height:50vh;
+    /* background-color: aqua; */
+    text-align: center;
+}
+.slogan p{
+    font-size: 48px;
+    color: #dbac66;
 }
 
 form {
@@ -52,3 +61,25 @@ footer {
     background: white;
 }
 
+
+@media screen and (max-width: 600px) {
+    #hero-img{
+        width:400px;
+        height:400px;        
+    }
+}
+
+
+@media screen and (max-width: 400px) {
+    #hero-img{
+        width:300px;
+        height:300px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    #hero-img{
+        width:200px;
+        height:200px;        
+    }
+}
