--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,5 @@
 body {
-   font-family: 'Oswald', 'Futura', sans-serif;
-}
-
-.my-wrapper{
-    height: 100%;
-    position: relative;
-}
-
-.hero-img-div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height:65vh;
-    text-align: center;
-}
-
-.hero-slogan{
-    min-height:20vh;    
-    font-size: 48px;    
-    text-align: center;
-    color: #dbac66;    
+    font-family: 'Oswald', 'Futura', sans-serif;
 }
 
 form {
@@ -30,67 +10,31 @@ form {
     margin-right: 50px;
     margin-left: 50px;
     border-radius: 15px;
-    box-shadow: 3px 6px 6px 6px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 3px 6px 6px 6px rgba(0, 0, 0, 0.2);
+            box-shadow: 3px 6px 6px 6px rgba(0, 0, 0, 0.2);
 }
 
-.form-control:focus{
-    color:#303030;
+.form-control:focus {
+    color: #303030;
 }
 
 .card_input {
     color: #303030;
 }
 
-.delete-btn-div{
-    float:right;
+.delete-btn-div {
+    float: right;
 }
 
-.btn-link{
-    color:#ab7a30;
-    text-decoration:none;
-    background-color:transparent;
-    border-color:#ab7a30
+.btn-link {
+    color: #ab7a30;
+    text-decoration: none;
+    background-color: transparent;
+    border-color: #ab7a30
 }
 
-.btn-link:hover{
-    color:#ffffff;
-    text-decoration:none;
-    background-color:#ab7a30;
-}
-
-footer {
-    width: 100%;    
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    position: absolute;
-    bottom: 0;
-    font-size: 20px;         
-    background: black;
-    color: #dbac66;
-}
-
-
-@media screen and (max-width: 600px) {
-    #hero-img{
-        width:400px;
-        height:400px;        
-    }
-}
-
-
-@media screen and (max-width: 400px) {
-    #hero-img{
-        width:300px;
-        height:300px;
-    }
-}
-
-@media screen and (max-width: 300px) {
-    #hero-img{
-        width:200px;
-        height:200px;        
-    }
+.btn-link:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #ab7a30;
 }
