--- a/css/grid.css
+++ b/css/grid.css
@@ -31,6 +31,7 @@ section{
 }
 
 .member-inner {
+    width: 100%;
     max-width: 1400px;
     min-height: 85vh;
     margin-top: 30px;
@@ -53,8 +54,9 @@ section{
 
 .member-card {
     min-height: 550px;
-    -ms-flex-preferred-size: 30%;
-        flex-basis: 30%;
+    max-width: 420px;
+    -ms-flex-preferred-size: auto;
+        flex-basis: auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
