--- a/css/userauth.css
+++ b/css/userauth.css
@@ -4,12 +4,13 @@
     align-items: center;
     width: 100%;
     min-height: 85vh;
+    padding-bottom:50px;
     /* background-color: blue; */
 }
 
 .userauth-form {
     width: 600px;
-    height: 600px;
+    min-height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -28,7 +29,9 @@
 }
 
 input[type=text],
-input[type=password] {
+input[type=password],
+input[type=email]
+{
     width: 100%;
     height: 40px;
     border: 1px solid #ccc;
@@ -48,6 +51,7 @@ input[type=password] {
 
 .userauth-submit {
     text-align: center;
+    margin-bottom: 15px;
 }
 
 .login-btn {
@@ -74,20 +78,20 @@ input[type=password] {
 @media screen and (max-width: 650px) {
     .userauth-form {
         width: 400px;
-        height: 500px;
+        min-height: 500px;
     }
 }
 
 @media screen and (max-width: 450px) {
     .userauth-form {
         width: 300px;
-        height: 450px;
+        min-height: 450px;
     }
 }
 
 @media screen and (max-width: 350px) {
     .userauth-form {
         width: 250px;
-        height: 450px;
+        min-height: 450px;
     }
 }
